--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,10 +1,11 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+<?xml version="1.0" encoding="UTF-8" ?>
+
 
 <web-app>
   <display-name>WebBasics</display-name>
-  <!--
+
+
+
   <servlet>
     <servlet-name>ViewServlet</servlet-name>
     <servlet-class>org.example.ViewServlet</servlet-class>
@@ -13,5 +14,25 @@
     <servlet-name>ViewServlet</servlet-name>
     <url-pattern>/servlets</url-pattern>
   </servlet-mapping>
-  -->
+
+
+
+
+  <filter>
+  <filter-name>DataFilter</filter-name>
+<filter-class>org.example.filtres.DataFilter</filter-class>
+</filter>
+  <filter-mapping>
+    <filter-name>DataFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
+  <filter>
+    <filter-name>CharsetFilter</filter-name>
+    <filter-class>org.example.filtres.CharsetFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>CharsetFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
 </web-app>
